--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /*
 Theme Name: DevDmBootstrap4
-Theme URI: http://devdm.com/DevDmBootstrap4
+Theme URI: http://devdm.com/devdmbootstrap4
 Author: Danny Machal
 Author URI: http://devdm.com/
 Description: A no frills theme for Developers using Twitter Bootstrap 4 Alpha.
@@ -12,10 +12,6 @@ Text Domain: devdmbootstrap4
 
 This theme, like WordPress, is licensed under the GPL.
 Use it to make something cool, have fun, and share what you've learned with others.
-*/
 
-/*
-
-    The default Bootstrap 4 CSS and JS files are enqueued inside the functions.php file with the handler "... "
-
+The default Bootstrap 4 CSS and JS files are enqueued inside the functions.php file with the handle devdmbootstrap4css / devdmbootstrap4js
 */
