--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Tags: one-column, two-columns, right-sidebar, flexible-width, custom-header, custom-menu, editor-style, featured-images, rtl-language-support, sticky-post, translation-ready
 Text Domain: devdmbootstrap4
+GitHub Theme URI: https://github.com/dannymachal/devdmbootstrap4
 
 This theme, like WordPress, is licensed under the GPL.
 Use it to make something cool, have fun, and share what you've learned with others.
