--- a/assets/css/devdmbootstrap4_enhanced_nav.css
+++ b/assets/css/devdmbootstrap4_enhanced_nav.css
@@ -2,7 +2,15 @@
     margin: 0px !important;
 }
 
-@media (max-width: 48em) {
+.dmbs-header-nav-mobile-toggle {
+    display: none;
+}
+
+@media (max-width: 992px) {
+
+    .dmbs-header-nav-mobile-toggle {
+        display: block;
+    }
 
     .dropdown-menu {
         display: block !important;
