Working through the theme check errors

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: DevDmBootstrap4
+Theme Name: devdmbootstrap4
 Theme URI: http://devdm.com/devdmbootstrap4
 Author: Danny Machal
 Author URI: http://devdm.com/
