- customizer work - padding for archive style page headers - theme_mod one liners instead of multiple lines

--- a/assets/scss/devdmbootstrap/_theme.scss
+++ b/assets/scss/devdmbootstrap/_theme.scss
@@ -67,6 +67,10 @@
 
   .dmbs-main {
 
+    .dmbs-category-archive-title, .dmbs-category-archive-tag, .dmbs-category-archive-date {
+      margin-bottom: 2rem;
+    }
+
     .dmbs-post {
 
       &.card {
