--- a/assets/scss/devdmbootstrap/_wordpresscore.scss
+++ b/assets/scss/devdmbootstrap/_wordpresscore.scss
@@ -76,17 +76,11 @@ a img.aligncenter {
     padding: 0 4px 5px;
 }
 
-.gallery-caption {
+.sticky {}
 
-}
+.gallery-caption {}
 
-.sticky {
-
-}
-
-.bypostauthor {
-
-}
+.bypostauthor {}
 
 /* Text meant only for screen readers. */
 .screen-reader-text {
