Updating customizer code and working on comment walker. Misc. Css tweaks.

--- a/assets/scss/devdmbootstrap/_theme.scss
+++ b/assets/scss/devdmbootstrap/_theme.scss
@@ -71,10 +71,14 @@
       margin-bottom: 2rem;
     }
 
+    .dmbs-author-page-header {
+      margin-bottom: 2.5vw;
+    }
+
     .dmbs-post {
 
       &.card {
-        margin-bottom: 3vw;
+        margin-bottom: 2.5vw;
       }
 
       &.sticky {
