bs4 update, customizer static function fix, code clean up.

--- a/assets/scss/devdmbootstrap/_theme.scss
+++ b/assets/scss/devdmbootstrap/_theme.scss
@@ -9,8 +9,8 @@
     .dmbs-logo-link { }
     .dmbs-logo-image {
 
-      max-width: 100%;
-      height: auto;
+      width: auto;
+      max-height: 150px;
 
     }
 
