--- a/assets/scss/devdmbootstrap/_theme.scss
+++ b/assets/scss/devdmbootstrap/_theme.scss
@@ -2,6 +2,9 @@
 
 .dmbs-header {
 
+  padding-top: 8px;
+  padding-bottom: 8px;
+
   .dmbs-header-left {
 
     text-align: center;
@@ -9,7 +12,7 @@
     .dmbs-logo-link { }
     .dmbs-logo-image {
 
-      width: auto;
+      max-width: 100%;
       max-height: 150px;
 
     }
@@ -20,7 +23,7 @@
 
     .dmbs-header-title {
 
-      padding-top: 32px;
+      padding-top: 0;
 
       @media (max-width: map-get($grid-breakpoints, 'lg')) {
         padding-top: 8px;
@@ -243,8 +246,6 @@
   .dmbs-footer-nav { }
 
 }
-
-
 
 .dmbs-author-credits {
 
