break words on .dmbs-page

--- a/assets/scss/devdmbootstrap/_theme.scss
+++ b/assets/scss/devdmbootstrap/_theme.scss
@@ -125,6 +125,13 @@
 
     }
 
+    .dmbs-page {
+
+      overflow-wrap: break-word;
+      word-wrap: break-word;
+
+    }
+
     .dmbs-comments {
 
       $commentGutters: 1rem;
