Tag update in style.css

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ Description: A no frills theme for Developers using Twitter Bootstrap 4.
 Version: 1.2
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
-Tags: one-column, two-columns, right-sidebar, custom-header, custom-menu, editor-style, featured-images, rtl-language-support, sticky-post, translation-ready
+Tags: one-column, two-columns, right-sidebar, custom-header, custom-menu, editor-style, featured-images, sticky-post, translation-ready
 Text Domain: devdmbootstrap4
 GitHub Theme URI: https://github.com/dannymachal/devdmbootstrap4
 
