Updating bootstrap with the latest pull as of 01/30/18.
Removing rounded corners from featured images.

--- a/assets/scss/devdmbootstrap/_theme.scss
+++ b/assets/scss/devdmbootstrap/_theme.scss
@@ -112,7 +112,11 @@
         text-align: right;
 
       }
-      .dmbs-post-featured-image { }
+      .dmbs-post-featured-image {
+        img {
+          border-radius: 0;
+        }
+      }
       .dmbs-post-content {
 
         overflow-wrap: break-word;
