Bootstrap Update. Archive title h1 -> h2.
page template max image size fix.

--- a/assets/scss/devdmbootstrap/_wordpresscore.scss
+++ b/assets/scss/devdmbootstrap/_wordpresscore.scss
@@ -116,7 +116,7 @@ a img.aligncenter {
 .size-large,
 .size-medium,
 .size-thumbnail,
-.dmbs-post img {
+.dmbs-post img, .dmbs-page img {
     max-width: 100%;
     height: auto;
 }
